# ShinCrypt

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/gtk/: about_win.rs  gtk.css  gtk_ui.rs  mod.rs  settings_win.rs
src/logic/: encryption.rs  global.rs  mod.rs
