[package]
name = "ShinCrypt"
version = "0.1.3"
edition = "2024"
authors = ["Ken Masters <GameHackingDojo@gmail.com>"]
description = "Secure, fast and free cross platform encryption tool. Uses XChaCha20 not AES as NSA (Nasty Surveillance Agency) recommends"
license = "GPL-3.0"
repository = "https://github.com/GameHackingDojo/ShinCrypt"
license-file = "LICENSE"


[build-dependencies]
winres = "0.1"

[dependencies]
fs_extra = "1.3"
tar = "0.4"
parking_lot = "0.12"
crossbeam = "0.8"    # channel

getrandom = "0.3"

ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["blocking", "json"] }
webbrowser = "1.0"

# GUI
gtk4 = { version = "0.10", features = ["v4_18"] }

# Encryption
chacha20 = "0.9"
argon2 = { version = "0.5", features = ["std"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dwmapi", "winuser"] }
gdk4-win32 = "0.10"


# [package.metadata.windows]
# icon = "resources/icon.ico"
